@@ -2,10 +2,14 @@ package com.bupt.tarecruitment.ui;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import com.bupt.tarecruitment.application.ApplicationStatusPresenter;
 import com.bupt.tarecruitment.application.JobApplication;
 import com.bupt.tarecruitment.job.JobPosting;
+import com.bupt.tarecruitment.mo.RankedApplicantCandidate;
 
 import javafx.application.Application;
 import javafx.geometry.Insets;
@@ -16,8 +20,6 @@ import javafx.scene.control.Label;
 import javafx.scene.control.ScrollPane;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
-import javafx.scene.layout.Priority;
-import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
 import javafx.scene.text.Font;
@@ -56,6 +58,10 @@ public class ApplicationReviewPage extends Application {
                 .orElse(ownedJobs.getFirst());
             ApplicationReviewWorkspace workspace = ApplicationReviewWorkspace.create(ownedJobs, initialJob);
 
+            workspace.applicantListBox().setPrefWidth(560);
+            workspace.applicantListBox().setMinWidth(520);
+            workspace.detailContent().setPrefWidth(360);
+
             Runnable[] refreshListRef = new Runnable[1];
             refreshListRef[0] = () -> {
                 workspace.applicantListBox().getChildren().clear();
@@ -64,7 +70,24 @@ public class ApplicationReviewPage extends Application {
                     return;
                 }
 
-                List<JobApplication> applications = loadApplicationsForJob(context, selectedJob.jobId());
+                List<RankedApplicantCandidate> rankedCandidates = context.services().moApplicantRankingService()
+                    .rankApplicantsForJob(selectedJob.jobId());
+                Map<String, RankedApplicantCandidate> rankingByApplicationId = rankedCandidates.stream()
+                    .collect(Collectors.toMap(
+                        RankedApplicantCandidate::applicationId,
+                        Function.identity(),
+                        (left, right) -> left
+                    ));
+
+                List<JobApplication> applications = loadApplicationsForJob(context, selectedJob.jobId()).stream()
+                    .sorted(Comparator
+                        .comparingInt((JobApplication application) -> rankingByApplicationId
+                            .getOrDefault(application.applicationId(), fallbackCandidate(application))
+                            .rankScore())
+                        .reversed()
+                        .thenComparing(JobApplication::applicationId))
+                    .toList();
+
                 if (applications.isEmpty()) {
                     workspace.applicantListBox().getChildren().add(UiTheme.createWhiteCard(
                         "No applications",
@@ -78,22 +101,30 @@ public class ApplicationReviewPage extends Application {
 
                 if (workspace.selectedApplication() == null
                     || applications.stream().noneMatch(app -> app.applicationId().equals(workspace.selectedApplication().applicationId()))) {
-                    workspace.setSelectedApplication(applications.getFirst());
+                    workspace.setSelectedApplication(applications.get(0));
+                }
+
+                if (!rankedCandidates.isEmpty()) {
+                    workspace.applicantListBox().getChildren().add(createRankingSummaryCard(rankedCandidates));
                 }
 
                 for (JobApplication application : applications) {
-                        workspace.applicantListBox().getChildren().add(createApplicantRow(
-                            context,
-                            application,
-                            workspace.selectedApplication() != null
-                                && application.applicationId().equals(workspace.selectedApplication().applicationId()),
-                            selected -> {
-                                workspace.setSelectedApplication(selected);
-                                ApplicationReviewDetailsPanel.renderSelectedDetail(
-                                    context,
-                                    selected,
-                                    workspace.detailTitle(),
-                                    workspace.detailContent(),
+                    RankedApplicantCandidate candidate = rankingByApplicationId
+                        .getOrDefault(application.applicationId(), fallbackCandidate(application));
+
+                    workspace.applicantListBox().getChildren().add(createApplicantRow(
+                        context,
+                        application,
+                        candidate,
+                        workspace.selectedApplication() != null
+                            && application.applicationId().equals(workspace.selectedApplication().applicationId()),
+                        selected -> {
+                            workspace.setSelectedApplication(selected);
+                            ApplicationReviewDetailsPanel.renderSelectedDetail(
+                                context,
+                                selected,
+                                workspace.detailTitle(),
+                                workspace.detailContent(),
                                 workspace.actionStatus(),
                                 nav,
                                 refreshListRef[0]
@@ -124,7 +155,6 @@ public class ApplicationReviewPage extends Application {
         ScrollPane pageScroll = new ScrollPane(content);
         pageScroll.setFitToWidth(true);
         pageScroll.setPannable(true);
-        // Keep the same page background as other MO pages (UiTheme.pageBackground()).
         pageScroll.setStyle("-fx-background-color: transparent; -fx-background: transparent; -fx-border-color: transparent;");
 
         BorderPane root = UiTheme.createPage(
@@ -134,11 +164,11 @@ public class ApplicationReviewPage extends Application {
             nav,
             context
         );
+
         return UiTheme.createScene(root);
     }
 
     private static List<JobPosting> loadOwnedJobs(UiAppContext context) {
-        // Data source is repository snapshot at render time (no client cache).
         return context.services().jobRepository().findAll().stream()
             .filter(job -> job.organiserId().equals(context.session().userId()))
             .sorted(Comparator.comparing(JobPosting::jobId))
@@ -146,7 +176,6 @@ public class ApplicationReviewPage extends Application {
     }
 
     private static List<JobApplication> loadApplicationsForJob(UiAppContext context, String jobId) {
-        // Keep deterministic order for stable UI rendering and predictable tests.
         return context.services().applicationRepository().findAll().stream()
             .filter(application -> application.jobId().equals(jobId))
             .sorted(Comparator.comparing(JobApplication::applicationId))
@@ -156,54 +185,122 @@ public class ApplicationReviewPage extends Application {
     private static HBox createApplicantRow(
         UiAppContext context,
         JobApplication application,
+        RankedApplicantCandidate candidate,
         boolean selected,
         java.util.function.Consumer<JobApplication> onSelect
     ) {
         var profileOpt = context.services().profileRepository().findByUserId(application.applicantUserId());
 
         String applicantName = profileOpt.map(p -> p.fullName()).orElse(application.applicantUserId());
-        String major = profileOpt.map(p -> p.programme()).orElse("-");
-        String appliedDate = application.submittedAt().toLocalDate().toString();
 
         Label nameLabel = new Label(applicantName);
         nameLabel.setFont(Font.font("Arial", FontWeight.BOLD, 18));
         nameLabel.setTextFill(Color.web("#4664a8"));
-
-        Label majorLabel = new Label("Major: " + major);
-        majorLabel.setFont(Font.font("Arial", 16));
-        majorLabel.setTextFill(Color.web("#2f2f2f"));
-
-        Label dateLabel = new Label("Applied: " + appliedDate);
-        dateLabel.setFont(Font.font("Arial", 16));
-        dateLabel.setTextFill(Color.web("#2f2f2f"));
+        nameLabel.setPrefWidth(145);
+        nameLabel.setMinWidth(130);
 
         Label statusLabel = new Label(ApplicationStatusPresenter.toDisplayText(application.status()));
         statusLabel.setFont(Font.font("Arial", FontWeight.BOLD, 14));
         statusLabel.setTextFill(Color.web("#4664a8"));
         statusLabel.setPadding(new Insets(4, 10, 4, 10));
+        statusLabel.setPrefWidth(110);
+        statusLabel.setMinWidth(100);
         statusLabel.setStyle(
             "-fx-background-color: " + ApplicationReviewDetailsPanel.statusColor(application.status()) + ";"
                 + " -fx-background-radius: 10;"
         );
 
-        Button detailsButton = UiTheme.createSoftButton("View", 80, 42);
-        // Row action only updates local page state; no navigation side effects.
+        Label scoreLabel = new Label("Rank " + candidate.rankScore());
+        scoreLabel.setFont(Font.font("Arial", FontWeight.BOLD, 13));
+        scoreLabel.setTextFill(Color.WHITE);
+        scoreLabel.setPadding(new Insets(4, 10, 4, 10));
+        scoreLabel.setPrefWidth(85);
+        scoreLabel.setMinWidth(80);
+        scoreLabel.setStyle(
+            "-fx-background-color: " + rankingScoreColor(candidate.rankScore()) + ";"
+                + " -fx-background-radius: 10;"
+        );
+
+        Label matchLabel = new Label(candidate.skillMatchPercent() + "% skills");
+        matchLabel.setFont(Font.font("Arial", FontWeight.BOLD, 13));
+        matchLabel.setTextFill(Color.web("#4664a8"));
+        matchLabel.setPadding(new Insets(4, 10, 4, 10));
+        matchLabel.setPrefWidth(105);
+        matchLabel.setMinWidth(95);
+        matchLabel.setStyle(
+            "-fx-background-color: #eef2ff;"
+                + " -fx-background-radius: 10;"
+        );
+
+        Button detailsButton = UiTheme.createSoftButton("View", 72, 42);
+        detailsButton.setMinWidth(72);
         detailsButton.setOnAction(event -> onSelect.accept(application));
 
-        Region spacer1 = new Region();
-        Region spacer2 = new Region();
-        HBox.setHgrow(spacer1, Priority.ALWAYS);
-        HBox.setHgrow(spacer2, Priority.ALWAYS);
-
-        HBox row = new HBox(16, nameLabel, spacer1, statusLabel, detailsButton);
+        HBox row = new HBox(10, nameLabel, scoreLabel, matchLabel, statusLabel, detailsButton);
         row.setAlignment(Pos.CENTER_LEFT);
-        row.setPadding(new Insets(14, 16, 14, 16));
+        row.setPadding(new Insets(14, 10, 14, 10));
         row.setMaxWidth(Double.MAX_VALUE);
         row.setStyle(
             (selected ? "-fx-background-color: #fdf4fb;" : "-fx-background-color: transparent;")
                 + "-fx-border-color: #f4d9e6; -fx-border-width: 0 0 2 0;"
         );
+
         return row;
+    }
+
+    private static VBox createRankingSummaryCard(List<RankedApplicantCandidate> candidates) {
+        RankedApplicantCandidate top = candidates.get(0);
+
+        Label title = new Label("AI-style applicant ranking");
+        title.setFont(Font.font("Arial", FontWeight.BOLD, 16));
+        title.setTextFill(Color.web("#4664a8"));
+
+        Label body = new Label(
+            "Top candidate: " + top.applicantName()
+                + " | Score: " + top.rankScore()
+                + " | Skill match: " + top.skillMatchPercent() + "%"
+                + " | Availability: " + (top.availabilityFit() ? "Fit" : "Risk")
+        );
+        body.setWrapText(true);
+        body.setTextFill(Color.web("#5c6481"));
+
+        VBox card = new VBox(6, title, body);
+        card.setPadding(new Insets(12, 14, 12, 14));
+        card.setStyle(
+            "-fx-background-color: #fff8fb;"
+                + "-fx-background-radius: 16;"
+                + "-fx-border-color: #f4d9e6;"
+                + "-fx-border-radius: 16;"
+        );
+
+        return card;
+    }
+
+    private static RankedApplicantCandidate fallbackCandidate(JobApplication application) {
+        return new RankedApplicantCandidate(
+            application.applicationId(),
+            application.jobId(),
+            application.applicantUserId(),
+            application.applicantUserId(),
+            application.status(),
+            0,
+            0,
+            false,
+            false,
+            List.of(),
+            List.of(),
+            List.of("Ranking data unavailable")
+        );
+    }
+
+    private static String rankingScoreColor(int score) {
+        if (score >= 80) {
+            return "#2e7d32";
+        }
+        if (score >= 55) {
+            return "#f39c12";
+        }
+        return "#e74c3c";
     }
 
     public static void main(String[] args) {
